cmake_minimum_required(VERSION 3.25)
project(cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp linklist/lc206_fanzhuanlianbiao.cpp linklist/listnode.h linklist/lc02_fanzhuanlianbiao2.cpp yufa/1_newchongzai.cpp yufa/2_xuhanshu.cpp yufa/3_xuhanshubiao.cpp yufa/4_jiegoutiduiqi.cpp yufa/5_a.cpp yufa/6_daxiaoduan.cpp yufa/7_zhizhenyinyong.cpp shuzu/lc704_erfen.cpp shuzu/lc27_yichuyuansu.cpp shuzu/lc977_youxushuzupingfang.cpp)
