cmake_minimum_required(VERSION 3.25)
project(cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp hash/lc15_sanshuzhihe.cpp hash/lc9_sishuzhihe.cpp linklist/lc114_erchashuzhankaiweilianbiao.cpp linklist/TreeNode.h string/lc344_fanzhuanzifuchuan.cpp string/lc541_fanzhuanzifuchuan2.cpp string/lc151_fanzhuanzifuchuandanci.cpp shuangzhizhen/lc27_yichuyuansu.cpp linklist/lc19_shanchulianbiaodaoshudiNgejiedian.cpp linklist/lc_lianbiaoxiangjiao.cpp linklist/lc142_huanxinglianbiao2.cpp stack/lc232_zhanshixianduilie.cpp stack/lc225_duilieshixianzhan.cpp stack/lc20_youxiaodekuohao.cpp)
